Fix: legendにgapが効かない問題があるようなのでlegendだけmarginに変更🐛

--- a/src/sass/object/component/_formSection.scss
+++ b/src/sass/object/component/_formSection.scss
@@ -11,6 +11,10 @@
 
 .c-formSection__heading {
   display: inline-block;
+
+  @at-root legend#{&} {
+    margin-bottom: $size-gap-base;
+  }
 }
 
 .c-formSection__body {
